--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                     <img src="images/callout-banner.jpg" class="img-fluid" alt="Inbox">
                 </div> <!-- Callout Banner -->
 
+                
             </div>
         </div>
     </section> <!-- Site Front  -->
@@ -331,7 +332,7 @@
 
             <div class="container">
 
-                <h1><span class="before-heading">Process</span>Managing One's<span> Visa</span></h1>
+                <h1><span class="before-heading">Process</span>Consultation with your <span> Visa</span></h1>
                 <p>Getting Consultation with your visa agency through various way</p>
 
                 <div class="row">
