--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
             <div class="container">
 
-                <h1><span class="before-heading">Process</span>Consultation with your <span> Visa</span></h1>
+                <h1><span class="before-heading">Process</span>Consultation with <span>your Visa</span></h1>
                 <p>Getting Consultation with your visa agency through various way</p>
 
                 <div class="row">
